fixed styling and spacing issues

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -40,6 +40,8 @@ body {
 }
 
 .container {
+    padding-right: 3rem !important;
+    padding-left: 3rem !important;
 }
 
 @keyframes appear {
